# FM-os

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  lychee.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: suggest-resource.yml
.github/workflows/: certify.yml  ci.yml  pages.yml  sync.yml
data/: _certifications.yml  _stars.yml  ainative.yml  certify.yml  courses.yml  jd_taxonomy.yml  jobs.yml  labs.yml  meta.yml  models.yml  papers.yml  people.yml  registry.yml  repos.yml
distill/: manifest.json
docs/: CERTIFY.md  DISTILLERY.md  GROWTH.md  LAUNCH.md  TRANSFER-PROMPT-animate-anything.md  TRANSFER-PROMPT-fde-os.md  TRANSFER-PROMPT-money-os.md  TRANSFER-PROMPT-rsi.md  TRANSFER-PROMPT.md
journey/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
labs/: README.md
labs/nomadicml/nomadic_mini/: pyproject.toml
labs/nomadicml/nomadic_mini/nomadic_mini/: __init__.py  agentic_search.py  analyze.py  client.py  events.py  frames.py  search.py
labs/nomadicml/nomadic_mini/scripts/: copilot_depth_test.py  run_examples.py
labs/nomadicml/nomadic_mini/tests/: test_agentic_search.py  test_e2e_vlm.py  test_parity_live.py  test_schema.py  test_search.py
openspace-trial/: INVENTORY.md  RUNBOOK.md
scripts/: ainative.py  build_readme.py  build_router.py  build_site.py  certify.py  distill.py  jdfit.py  sync.py  validate.py
site/: app.js  index.html  style.css
tests/: conftest.py  test_ainative.py  test_build_readme.py  test_certify.py  test_continual_rl_eval.py  test_fmos.py  test_jdfit.py  test_validate_and_site.py
(+331 files in other folders)
